Add SCK_Casual asset in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ Content/FXVarietyPack/
 #       Particles/
 #           P_my_ky_hit1 (FXVarietyPack/Particles/P_ky_hit1)
 
+Content/SCK_Casual01
+SCK_Casual01.png
+
 
 #/Build
 Saved/
