--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,12 @@ Content/FXVarietyPack/
 
 Content/SCK_Casual01
 SCK_Casual01.png
+###### BE ADVISED ! THIS IS NOT THE VANILLA PACKAGE AS I HAD TO CUSTOMIZE MATERIALS TO INTEGRATE THE CHARACTER_APPEARANCE_DISSOLVE ASSETS AND MATERIAL FUNCTIONS INTO OUR PLAYER'S MATERIALS
+Content/CUSTOM_MATERIALS_SCK_Casual01.zip
 
+Content/Character_Appearance_Dissolve
+Content/Character_Appearance_Dissolve.zip
+# used in the BP_ThirdPersonCharacter Material to dissolve/appear
 
 #/Build
 Saved/
